--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "mocha **/*.test.js",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "7.9.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
