--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha **/*.test.js",
+    "test": "mocha **/*.test.js *.test.js",
     "start": "node server.js"
   },
   "engines": {
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "expect": "^1.20.2",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0"
   }
 }
